force-app/main/default/objects/CARE_APP_Image_List__c/CARE_APP_Image_List__c.object-meta.xml
<CustomObject>
    <description>CARE Application image id list, and lookup url links to external image site, and CASE lookup like</description>
    <label>CARE APP Image List</label>
    <nameField>
        <displayFormat>CTI{0000000000}</displayFormat>
        <label>NAME  (Image No)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE APP Image List</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>