force-app/main/default/objects/CARE_APP_Image_List__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>CARE Application</label>
    <referenceTo>CARE_Application__c</referenceTo>
    <relationshipLabel>CARE APP Image List</relationshipLabel>
    <relationshipName>CARE_APP_Image_List</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>