force-app/main/default/objects/CARE_APP_Image_List__c/fields/CASE__c.field-meta.xml
<CustomField>
    <fullName>CASE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASE</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>CARE APP Image List</relationshipLabel>
    <relationshipName>CARE_APP_Image_List</relationshipName>
    <type>Lookup</type>
</CustomField>