force-app/main/default/objects/CARE_APP_Image_List__c/fields/DOC_URL__c.field-meta.xml
<CustomField>
    <fullName>DOC_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DOC URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>