force-app/main/default/objects/CARE_APP_Image_List__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARE Facility</label>
    <referenceTo>CARE_Facility__c</referenceTo>
    <relationshipLabel>CARE APP Image List</relationshipLabel>
    <relationshipName>CARE_APP_Image_List</relationshipName>
    <type>Lookup</type>
</CustomField>