force-app/main/default/objects/CARE_APP_Image_List__c/fields/IMAGE_ID__c.field-meta.xml
<CustomField>
    <fullName>IMAGE_ID__c</fullName>
    <label>IMAGE ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>