force-app/main/default/objects/CARE_APP_Image_List__c/fields/IMAGE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>IMAGE_TYPE__c</fullName>
    <label>IMAGE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DATAXPORT</fullName>
            </value>
            <value>
                <fullName>DOCUMENTUM</fullName>
            </value>
            <value>
                <fullName>CASE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>