force-app/main/default/objects/CARE_APP_Image_List__c/fields/IS_VALID__c.field-meta.xml
<CustomField>
    <fullName>IS_VALID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS VALID</label>
    <type>Checkbox</type>
</CustomField>