force-app/main/default/objects/CARE_APP_Image_List__c/fields/SOURCE_SYSTEM__c.field-meta.xml
<CustomField>
    <fullName>SOURCE_SYSTEM__c</fullName>
    <label>SOURCE SYSTEM</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DATAXPORT</fullName>
            </value>
            <value>
                <fullName>DOCUMENTUM</fullName>
            </value>
            <value>
                <fullName>CASE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>