force-app/main/default/objects/CARE_APP_Image_List__c/recordTypes/Non_Residential.recordType-meta.xml
<RecordType>
    <fullName>Non_Residential</fullName>
    <active>true</active>
    <description>Stores NP, AG, MF, SM data</description>
    <label>Non-Residential</label>
</RecordType>