force-app/main/default/objects/CARE_APP_Image_List__c/recordTypes/Residential.recordType-meta.xml
<RecordType>
    <fullName>Residential</fullName>
    <active>true</active>
    <description>Stores residential data</description>
    <label>Residential</label>
</RecordType>